@@ -13,6 +13,9 @@ http://www.ietf.org/rfc/rfc2696.txt
 
 Changes in version 1.2.2 (XXX 2008)
 -------------------------------------------
+* Added a method DistinguishedName.toCompactString that returns a more
+  compact String representation without blanks. (LDAP-91)
+
 * Improved search methods that take handlers so that they will work
   with handlers that use ContextMappers, eg ContextMapperCallbackHandler.
   (LDAP-107)
